--- a/UnamWebPanel/assets/css/custom.css
+++ b/UnamWebPanel/assets/css/custom.css
@@ -200,3 +200,61 @@
 .dark-mode .external-page-logo a {
     color: #fff;
 }
+
+.select-miner-config {
+    width: 50% !important;
+    display: inline;
+}
+
+.round-switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 22px;
+}
+
+.round-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.round-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    border-radius: 34px;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.round-slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    border-radius: 50%;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .round-slider {
+    background-color: #2196F3;
+}
+
+input:focus + .round-slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .round-slider:before {
+    -webkit-transform: translateX(18px);
+    -ms-transform: translateX(18px);
+    transform: translateX(18px);
+}
